# python-starter-app

./: .env.sample  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  modal_app.py  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml  pr.yml
src/myapplication/: __init__.py  cli.py  main.py  settings.py
tests/: __init__.py  test_myapplication.py
