[tool.poetry]
name = "python-starter-app"
version = "0.1.0"
description = "Python starter app"
authors = ["Tiger Shen <tigershen23@gmail.com>"]
packages = [
    { include = "*", from = "src" }
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tigershen23/python-starter-app#readme"
repository = "https://github.com/tigershen23/python-starter-app"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "2.8.2"
pydantic-settings = "^2.3.4"
typer = "^0.12.3"
modal = "^0.63.51"
streamlit = "^1.36.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
pytest-cov = "5.0.0"
bandit = "1.7.9"
docformatter = "1.7.5"
ruff = "0.5.1"
watchdog = "^4.0.1"

[tool.poetry.scripts]
myapplication = "myapplication.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
backend-path = ["src"]

[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = "tests"

[tool.ruff]
extend-exclude = [
    "__pycache__",
    "build",
    "dist",
]
target-version = "py312"
line-length = 90
src = ["src", "tests"]

[tool.ruff.lint]
extend-select = [
    "C4",
    "D200",
    "D201",
    "D204",
    "D205",
    "D206",
    "D210",
    "D211",
    "D213",
    "D300",
    "D400",
    "D402",
    "D403",
    "D404",
    "D419",
    "E",
    "F",
    "G010",
    "I001",
    "INP001",
    "N805",
    "PERF101",
    "PERF102",
    "PERF401",
    "PERF402",
    "PGH004",
    "PGH005",
    "PIE794",
    "PIE796",
    "PIE807",
    "PIE810",
    "RET502",
    "RET503",
    "RET504",
    "RET505",
    "RUF015",
    "RUF100",
    "S101",
    "T20",
    "W",
]
