[tool.poetry]
name = "python-starter-app"
version = "0.1.0"
description = "Python starter app"
authors = ["Tiger Shen <tigershen23@gmail.com>"]
packages = [
    { include = "*", from = "src" }
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tigershen23/python-starter-app#readme"
repository = "https://github.com/tigershen23/python-starter-app"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "2.8.2"
pydantic-settings = "^2.3.4"
typer = "^0.12.3"
modal = "^0.63.51"
streamlit = "^1.36.0"
pyright = "^1.1.372"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
pytest-cov = "5.0.0"
bandit = "1.7.9"
ruff = "0.5.1"
watchdog = "^4.0.1"

[tool.poetry.scripts]
myapplication = "myapplication.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
backend-path = ["src"]

[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = "tests"

[tool.ruff]
extend-exclude = [
    "__pycache__",
    "build",
    "dist",
]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D101", "D102", "D103", "D202", "D211", "D213", "G004", "S311", "COM812", "ISC001", "TRY300"] # Ruff warnings about conflicts

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
